--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,19 @@
   <title>To-Do List: Weekend 3 Challenge</title>
 </head>
 <body>
-  <h1>To-Do</h1>
+  <div class="container">
+    <div class="row header">  
+      <h1>To-Do</h1>
+    </div>
+    <div class="row inputRow">
+      <form id="todoForm">
+        <input type="text" id="todoIn" />
+        <input type="submit" id="submitButton" value="Submit" />
+      </form>
+    </div>
+    <div class="row">
+      <ul class="todoContainer"></ul>
+    </div>
+  </div>
 </body>
 </html>
