Get route functioning

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
     <div class="row inputRow">
       <form id="todoForm">
         <input type="text" id="todoIn" />
-        <input type="submit" id="submitButton" value="Submit" />
+        <input type="submit" class="btn btn-submit id="submitButton" value="Submit" />
       </form>
     </div>
     <div class="row">
