Wrote some logic for displaying completed items differently than incomplete items

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="vendors/jquery.js"></script>
+  <script src="vendors/bootstrap/js/bootstrap.js"></script>
   <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="styles/style.css">
-  <script src="vendors/jquery.js"></script>
   <script src="scripts/client.js"></script>
   <title>To-Do List: Weekend 3 Challenge</title>
 </head>
