Delete and completed toggle buttons work. List puts completed items on bottom and in the order they were created

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,7 +23,16 @@
       </form>
     </div>
     <div class="row">
-      <ul class="todoContainer"></ul>
+      <table>
+        <thead>
+          <th>Completed?</th>
+          <th>Item</th>
+          <th>Delete</th>
+        </thead>
+        <tbody id="todoContainer">
+
+        </tbody>
+      </table>
     </div>
   </div>
 </body>
