completed items turn green

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row inputRow">
       <form id="todoForm">
-        <input type="text" id="todoIn" />
+        <input type="text" id="todoIn" placeholder="To-do"/>
         <input type="submit" class="btn btn-primary" id="submitButton" value="Submit" />
       </form>
     </div>
