some style adjustment. some groundwork for due dates

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,7 +17,7 @@
     <div class="row header">  
       <h1>To-Do</h1>
     </div>
-    <div class="row inputRow">
+    <div id="inputRow" class="row">
       <form id="todoForm">
         <input type="text" id="todoIn" placeholder="To-do"/>
         <input type="date" id="dateIn">
