--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,7 +20,7 @@
     <div id="inputRow" class="row">
       <form id="todoForm">
         <input type="text" id="todoIn" placeholder="To-do"/>
-        <input type="date" id="dateIn">
+        <!-- <input type="date" id="dateIn"> -->
         <!-- <select id="priority" name="priority">
           <option value="high">High</option>
           <option value="normal" selected>Normal</option>
