--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="row header">  
-      <h1>To-Do</h1>
+      <h1>To-Do List</h1>
     </div>
     <div id="inputRow" class="row">
       <form id="todoForm">
